--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "process.env.TOKEN",
+    "token": "OTY0OTAzODQxMDU5NDYzMjU5.Ylraug.AznbJtLkLWUsAVZvrL4CpfqfpEA",
     "adminIDs": ["457098987992907776"],
     "guildID": "964900877427179530"
 }
